<resources>
    <string name="app_name">OwnYourVet</string>
    <string name="login_email">Correo</string>
    <string name="login_password">Contraseña</string>
    <string name="login_confirm_password">Confirmar contraseña</string>
    <string name="login_sign_in">Iniciar sesión</string>
    <string name="login_sign_up">Crear cuenta</string>
    <string name="login_reset_password">Cambiar mi contraseña</string>
    <string name="login_sign_in_google">Iniciar sesión con Google</string>
    <string name="login_forgot_password">Olvidé mi contraseña</string>
    <string name="login_create_account">Crear nueva cuenta</string>
    <string name="login_go_login">Regresar al inicio de sesión</string>

    <string name="selected_item">Selected item:</string>

    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="chat_edittext_message_hint">Escribe un mensaje...</string>
    <string name="animales_afectado_perros">Animales afectados: Perros</string>
    <string name="animales_afectados_gatos">Animales afectados: Gatos</string>
    <string name="nombre">Nombre</string>
    <string name="informacion">Información</string>
    <string name="te_ayudamos_a_cuidar_la_salud_de_tus_mascotas">Te ayudamos a cuidar la salud de tus mascotas</string>
    <string name="descripcion_plan_vacunacion">
        La importancia de las vacunas está dada por el efecto que tiene en el cuerpo de nuestra mascota permitiendo que sus sistema inmunológico se fortalezca y proteja mejor frente a cualquier amenaza en su organismo. Algunas de estas vacunas previenen la aparición de enfermedades que comprometen de la vida de nuestra mascota como la rabia o el moquillo.

        Debemos tener en cuenta que las vacunas deben realizarse de acuerdo a un plan entregado por el veterinario/a.
    </string>
    <string name="especie">Especie:</string>
    <string name="descripcion_onwyourvet">Somos un hospital veterinario que brinda servicio las 24 horas del día y los 7 días de la semana, contamos con más de 20 años de experiencia en el mercado, con profesionales altamente calificados y tecnología de punta.</string>
    <string name="nuestra_mision">Nuestra Misión</string>
    <string name="mision">Brindar servicios profesionales en medicina veterinaria integral, con un personal profesional para preservar la salud y calidad de vida de nuestros pacientes, así como mantener la confianza con los propietarios, por medio de un compromiso de capacitación continua.</string>
    <string name="nuestra_vision">Nuestra Visión</string>
    <string name="vision">Ser una institución profesional con personal capacitado y experimentado para brindar servicios especializados y a ritmo con los avances de la medicina veterinaria.</string>
    <string name="objetivos">Objetivos</string>
    <string name="uno">1. Mantenerse siempre a la vanguardia, a la altura de los estándares mundiales en medicina veterinaria en temas tecnológicos.</string>
    <string name="dos">2. Constante capacitación con asistencia a congresos y capacitaciones dentro y fuera del país.</string>
    <string name="tres">3. Estar a la disposición del cliente 24/7, ofreciéndole un servicio eficiente y de calidad.</string>
    <string name="farmacia_veterinaria">Farmacia Veterinaria</string>
    <string name="consiste_en_la_comercializaci_n_de_medicamentos_para_animales">Consiste en la comercialización de diversos medicamentos de calidad para animales.</string>
    <string name="consultas">Atención de consultas</string>
    <string name="atConsultas">Las consultas pueden estar dirigidas a la prevención o el tratamiento de enfermedades, como así también a la búsqueda de asesoramiento en general.</string>
    <string name="cirugias">Cirugías</string>
    <string name="ciru">Las cirugías se deben realizar en un lugar preparado para tal fin, el cual debe estar separado debidamente de otras dependencias de la clínica. La naturaleza de las intervenciones es amplia dependiendo el veterinario actuante.</string>
    <string name="laboratorio">Laboratorio</string>
    <string name="labo">Se pueden realizar análisis complementarios ya sea bioquímicos, histopatológicos, dérmicos, etc., esto permite acceder a un diagnóstico de manera más rápida, ofreciendo una mejor atención al cliente y al paciente.</string>
    <string name="internaci_n">Internación</string>
    <string name="inter">Este servicio permite realizar un seguimiento del paciente, observando la evolución de la enfermedad. Se debe prestar especial atención en separar pacientes con enfermedades infecciosas de enfermedades no infecciosas.</string>
    <string name="esterilizaci_n">Esterilización</string>
    <string name="este">La esterilización en una hembra y castración en un macho mejora su estado de salud, su calidad de vida y su longevidad en un promedio de uno a tres años en los perros, y de tres a cinco años en los gatos.</string>
</resources>
