<?xml version="1.0" encoding="utf-8"?>

<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/colorPrimaryDark"
    android:fillViewport="true"
    tools:context=".Activities.LoginActivity">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:gravity="center"
        android:orientation="vertical">

        <EditText
            android:id="@+id/editText_Email"
            android:layout_width="match_parent"
            android:layout_height="@dimen/login_edit_text_height"
            android:layout_marginLeft="32dp"
            android:layout_marginRight="32dp"
            android:background="@drawable/edit_text_rounded"
            android:hint="@string/login_email"
            android:inputType="textEmailAddress"
            android:fontFamily="@font/golden_sans"
            android:padding="@dimen/login_edit_text_space"
            android:textSize="@dimen/login_text_size" />

        <EditText
            android:id="@+id/editText_Password"
            android:layout_width="match_parent"
            android:layout_height="@dimen/login_edit_text_height"
            android:layout_marginLeft="32dp"
            android:layout_marginTop="25dp"
            android:layout_marginRight="32dp"
            android:background="@drawable/edit_text_rounded"
            android:hint="@string/login_password"
            android:inputType="textPassword"
            android:fontFamily="@font/golden_sans"
            android:padding="@dimen/login_edit_text_space"
            android:textSize="@dimen/login_text_size" />

        <Button
            android:id="@+id/button_LogIn"
            android:layout_width="match_parent"
            android:layout_height="@dimen/login_button_xl_height"
            android:layout_marginLeft="32dp"
            android:layout_marginTop="40dp"
            android:layout_marginRight="32dp"
            android:background="@drawable/button_ripple_bg"
            android:text="@string/login_sign_in"
            android:textColor="@color/colorPrimaryText"
            android:fontFamily="@font/golden_sans_bold"
            android:textSize="@dimen/login_text_xl_size" />

        <TextView
            android:id="@+id/textView_ForgotPassword"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="15dp"
            android:textSize="16sp"
            android:fontFamily="@font/golden_sans"
            android:text="@string/login_forgot_password"
            android:textColor="@color/colorSecondaryText" />

        <Button
            android:id="@+id/button_LogInGoogle"
            android:layout_width="match_parent"
            android:layout_height="@dimen/login_button_xl_height"
            android:layout_marginLeft="32dp"
            android:layout_marginTop="60dp"
            android:layout_marginRight="32dp"
            android:fontFamily="@font/golden_sans_bold"
            android:background="@drawable/button_ripple_google"
            android:text="@string/login_sign_in_google"
            android:textColor="@color/colorPrimaryText" />

        <Button
            android:id="@+id/button_CreateAccount"
            android:layout_width="match_parent"
            android:layout_height="@dimen/login_button_xl_height"
            android:layout_marginTop="30dp"
            android:background="@drawable/button_ripple"
            android:text="@string/login_create_account"
            android:textColor="@color/colorSecondaryText"

            android:fontFamily="@font/golden_sans_bold"
            android:textSize="@dimen/login_text_size" />

    </LinearLayout>

</ScrollView>