<?xml version="1.0" encoding="utf-8"?>

<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/colorPrimaryDark"
    android:fillViewport="true"
    tools:context=".activities.SignUpActivity">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:gravity="center"
        android:orientation="vertical">

        <EditText
            android:id="@+id/editText_Email_SignUp"
            android:layout_width="match_parent"
            android:layout_height="@dimen/login_edit_text_height"
            android:layout_marginLeft="32dp"
            android:layout_marginRight="32dp"
            android:background="@drawable/edit_text_rounded"
            android:hint="@string/login_email"
            android:inputType="textEmailAddress"
            android:padding="@dimen/login_edit_text_space"
            android:textSize="@dimen/login_text_size" />

        <EditText
            android:id="@+id/editText_Password_SignUp"
            android:layout_width="match_parent"
            android:layout_height="@dimen/login_edit_text_height"
            android:layout_marginLeft="32dp"
            android:layout_marginTop="25dp"
            android:layout_marginRight="32dp"
            android:background="@drawable/edit_text_rounded"
            android:hint="@string/login_password"
            android:inputType="textPassword"
            android:padding="@dimen/login_edit_text_space"
            android:textSize="@dimen/login_text_size" />

        <EditText
            android:id="@+id/editText_ConfirmPassword_SignUp"
            android:layout_width="match_parent"
            android:layout_height="@dimen/login_edit_text_height"
            android:layout_marginLeft="32dp"
            android:layout_marginTop="25dp"
            android:layout_marginRight="32dp"
            android:background="@drawable/edit_text_rounded"
            android:hint="@string/login_confirm_password"
            android:inputType="textPassword"
            android:padding="@dimen/login_edit_text_space"
            android:textSize="@dimen/login_text_size" />

        <Button
            android:id="@+id/button_signUp_SignUp"
            android:layout_width="match_parent"
            android:layout_height="@dimen/login_button_xl_height"
            android:layout_marginLeft="32dp"
            android:layout_marginTop="60dp"
            android:layout_marginRight="32dp"
            android:background="@drawable/button_ripple_bg"
            android:text="@string/login_sign_up"
            android:textColor="@color/colorPrimaryText"
            android:textSize="@dimen/login_text_xl_size" />

        <Button
            android:id="@+id/button_GoLogin_SignUp"
            android:layout_width="match_parent"
            android:layout_height="@dimen/login_button_xl_height"
            android:layout_marginTop="30dp"
            android:background="@drawable/button_ripple"
            android:text="@string/login_go_login"
            android:textColor="@color/colorSecondaryText"
            android:textSize="@dimen/login_text_size" />

    </LinearLayout>

</ScrollView>