<?xml version="1.0" encoding="utf-8"?>
<LinearLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    xmlns:card_view="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    tools:context=".Fragments.ClientFragments.ServicesFragment">

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <LinearLayout
            android:orientation="vertical"
            android:layout_width="match_parent"
            android:layout_height="match_parent">

            <androidx.cardview.widget.CardView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginLeft="12dp"
                android:layout_marginTop="8dp"
                android:layout_marginRight="12dp"
                android:layout_marginBottom="8dp"
                android:orientation="vertical"
                card_view:cardCornerRadius="12dp"
                card_view:cardElevation="10dp"
                card_view:contentPadding="4dp">

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:padding="8dp"
                    android:orientation="vertical">

                    <TextView
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_marginLeft="8dp"
                        android:layout_marginTop="4dp"
                        android:layout_marginRight="8dp"
                        android:layout_marginBottom="4dp"
                        android:gravity="center"
                        android:fontFamily="@font/golden_sans_bold"
                        android:text="@string/farmacia_veterinaria"
                        android:textSize="25sp" />

                    <LinearLayout
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:orientation="horizontal">

                        <ImageView
                            android:layout_width="120dp"
                            android:layout_height="120dp"
                            android:src="@drawable/meds"/>
                        <com.codesgood.views.JustifiedTextView
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            android:layout_marginLeft="8dp"
                            android:layout_marginTop="4dp"
                            android:layout_marginRight="8dp"
                            android:layout_marginBottom="4dp"
                            android:fontFamily="@font/golden_sans"
                            android:text="@string/consiste_en_la_comercializaci_n_de_medicamentos_para_animales"
                            android:textSize="20sp" />

                    </LinearLayout>

                </LinearLayout>

            </androidx.cardview.widget.CardView>

            <androidx.cardview.widget.CardView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginLeft="12dp"
                android:layout_marginTop="8dp"
                android:layout_marginRight="12dp"
                android:layout_marginBottom="8dp"
                android:orientation="vertical"
                card_view:cardCornerRadius="12dp"
                card_view:cardElevation="10dp"
                card_view:contentPadding="4dp">

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:padding="8dp"
                    android:orientation="vertical">

                    <TextView
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_marginLeft="8dp"
                        android:layout_marginTop="4dp"
                        android:layout_marginRight="8dp"
                        android:layout_marginBottom="4dp"
                        android:gravity="center"
                        android:fontFamily="@font/golden_sans_bold"
                        android:text="@string/consultas"
                        android:textSize="25sp" />

                    <LinearLayout
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:orientation="horizontal">

                        <LinearLayout
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            android:orientation="horizontal">

                            <ImageView
                                android:layout_width="120dp"
                                android:layout_height="120dp"
                                android:src="@drawable/consult"/>
                            <com.codesgood.views.JustifiedTextView
                                android:layout_width="match_parent"
                                android:layout_height="wrap_content"
                                android:layout_marginLeft="8dp"
                                android:layout_marginTop="4dp"
                                android:layout_marginRight="8dp"
                                android:layout_marginBottom="4dp"
                                android:fontFamily="@font/golden_sans"
                                android:text="@string/atConsultas"
                                android:textSize="20sp" />

                        </LinearLayout>

                    </LinearLayout>
                </LinearLayout>

            </androidx.cardview.widget.CardView>

            <androidx.cardview.widget.CardView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginLeft="12dp"
                android:layout_marginTop="8dp"
                android:layout_marginRight="12dp"
                android:layout_marginBottom="8dp"
                android:orientation="vertical"
                card_view:cardCornerRadius="12dp"
                card_view:cardElevation="10dp"
                card_view:contentPadding="4dp">

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:padding="8dp"
                    android:orientation="vertical">

                    <TextView
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_marginLeft="8dp"
                        android:layout_marginTop="4dp"
                        android:layout_marginRight="8dp"
                        android:layout_marginBottom="4dp"
                        android:gravity="center"
                        android:fontFamily="@font/golden_sans_bold"
                        android:text="@string/cirugias"
                        android:textSize="25sp" />

                    <LinearLayout
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:orientation="horizontal">

                        <ImageView
                            android:layout_width="120dp"
                            android:layout_height="120dp"
                            android:src="@drawable/ciru"/>
                        <com.codesgood.views.JustifiedTextView
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            android:layout_marginLeft="8dp"
                            android:layout_marginTop="4dp"
                            android:layout_marginRight="8dp"
                            android:layout_marginBottom="4dp"
                            android:fontFamily="@font/golden_sans"
                            android:text="@string/ciru"
                            android:textSize="20sp" />

                    </LinearLayout>

                </LinearLayout>

            </androidx.cardview.widget.CardView>

            <androidx.cardview.widget.CardView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginLeft="12dp"
                android:layout_marginTop="8dp"
                android:layout_marginRight="12dp"
                android:layout_marginBottom="8dp"
                android:orientation="vertical"
                card_view:cardCornerRadius="12dp"
                card_view:cardElevation="10dp"
                card_view:contentPadding="4dp">

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:padding="8dp"
                    android:orientation="vertical">

                    <TextView
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_marginLeft="8dp"
                        android:layout_marginTop="4dp"
                        android:layout_marginRight="8dp"
                        android:layout_marginBottom="4dp"
                        android:gravity="center"
                        android:fontFamily="@font/golden_sans_bold"
                        android:text="@string/laboratorio"
                        android:textSize="25sp" />

                    <LinearLayout
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:orientation="horizontal">

                        <ImageView
                            android:layout_width="120dp"
                            android:layout_height="120dp"
                            android:src="@drawable/form"/>
                        <com.codesgood.views.JustifiedTextView
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            android:layout_marginLeft="8dp"
                            android:layout_marginTop="4dp"
                            android:layout_marginRight="8dp"
                            android:layout_marginBottom="4dp"
                            android:fontFamily="@font/golden_sans"
                            android:text="@string/labo"
                            android:textSize="20sp" />

                    </LinearLayout>

                </LinearLayout>

            </androidx.cardview.widget.CardView>

            <androidx.cardview.widget.CardView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginLeft="12dp"
                android:layout_marginTop="8dp"
                android:layout_marginRight="12dp"
                android:layout_marginBottom="8dp"
                android:orientation="vertical"
                card_view:cardCornerRadius="12dp"
                card_view:cardElevation="10dp"
                card_view:contentPadding="4dp">

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:padding="8dp"
                    android:orientation="vertical">

                    <TextView
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_marginLeft="8dp"
                        android:layout_marginTop="4dp"
                        android:layout_marginRight="8dp"
                        android:layout_marginBottom="4dp"
                        android:gravity="center"
                        android:fontFamily="@font/golden_sans_bold"
                        android:text="@string/internaci_n"
                        android:textSize="25sp" />

                    <LinearLayout
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:orientation="horizontal">

                        <ImageView
                            android:layout_width="120dp"
                            android:layout_height="120dp"
                            android:src="@drawable/vet"/>
                        <com.codesgood.views.JustifiedTextView
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            android:layout_marginLeft="8dp"
                            android:layout_marginTop="4dp"
                            android:layout_marginRight="8dp"
                            android:layout_marginBottom="4dp"
                            android:fontFamily="@font/golden_sans"
                            android:text="@string/inter"
                            android:textSize="20sp" />

                    </LinearLayout>

                </LinearLayout>

            </androidx.cardview.widget.CardView>

            <androidx.cardview.widget.CardView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginLeft="12dp"
                android:layout_marginTop="8dp"
                android:layout_marginRight="12dp"
                android:layout_marginBottom="8dp"
                android:orientation="vertical"
                card_view:cardCornerRadius="12dp"
                card_view:cardElevation="10dp"
                card_view:contentPadding="4dp">

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:padding="8dp"
                    android:orientation="vertical">

                    <TextView
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_marginLeft="8dp"
                        android:layout_marginTop="4dp"
                        android:layout_marginRight="8dp"
                        android:layout_marginBottom="4dp"
                        android:gravity="center"
                        android:fontFamily="@font/golden_sans_bold"
                        android:text="@string/esterilizaci_n"
                        android:textSize="25sp" />

                    <LinearLayout
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:orientation="horizontal">

                        <ImageView
                            android:layout_width="120dp"
                            android:layout_height="120dp"
                            android:src="@drawable/bisturi"/>
                        <com.codesgood.views.JustifiedTextView
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            android:layout_marginLeft="8dp"
                            android:layout_marginTop="4dp"
                            android:layout_marginRight="8dp"
                            android:layout_marginBottom="4dp"
                            android:fontFamily="@font/golden_sans"
                            android:text="@string/este"
                            android:textSize="20sp" />

                    </LinearLayout>

                </LinearLayout>

            </androidx.cardview.widget.CardView>


        </LinearLayout>
    </ScrollView>

</LinearLayout>